<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/foosballPlayersToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/foosball_players">

            <EditText
                android:id="@+id/foosballPlayersSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/foosball_players_search"
                android:inputType="textFilter|textCapWords"
                android:lines="1"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@null" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/foosballPlayersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <TextView
        android:id="@+id/foosballPlayersEmptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/default_padding"
        android:gravity="center"
        android:text="@string/foosball_players_empty"
        android:textColor="@android:color/black"
        android:textSize="@dimen/empty_text_size"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/foosballPlayerAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:src="@drawable/ic_add"
        app:layout_anchor="@id/foosballPlayersRecyclerView"
        app:layout_anchorGravity="end|bottom" />

</android.support.design.widget.CoordinatorLayout>